<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditUserData">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/pgE"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"
            android:layout_marginTop="300dp"/>

        <LinearLayout
            android:id="@+id/layoutPersonData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="15dp"
            android:visibility="visible">

            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Nombre"
                android:textSize="16sp"/>

            <EditText
                android:id="@+id/edtUserNameAccountEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:enabled="true"
                android:hint="Name"
                android:inputType="textCapWords"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/textView21"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Correo electrónico (usuario / no editable)"
                android:textSize="16sp"/>

            <EditText
                android:id="@+id/edtUserEmailAccountE"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:enabled="false"
                android:hint="Email"
                android:inputType="textEmailAddress"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/textView22"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Número telefónico"
                android:textSize="16sp"/>

            <EditText
                android:id="@+id/edtUserPhoneAccountEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:enabled="true"
                android:hint="Número"
                android:inputType="phone"
                android:maxLength="10"
                android:textSize="16sp"/>
            <Button
                android:id="@+id/btnSavePerson"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/guardar_cambios"
                android:background="@drawable/bg_button"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"/>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/layoutDir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="15dp"
            android:visibility="visible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/direcci_n"
                    android:textSize="16sp"/>

                <EditText
                    android:id="@+id/edtDirecUserEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="true"
                    android:hint="@string/calle_colonia_y_n_mero"
                    android:textSize="16sp"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="1">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/c_digo_postal"
                        android:layout_weight="0.3"
                        android:textSize="16sp"/>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/ciudad"
                        android:layout_weight="0.7"
                        android:layout_marginLeft="15dp"
                        android:textSize="16sp"/>

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1">

                <EditText
                    android:id="@+id/edtusercpEdit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:enabled="true"
                    android:hint="CP"
                    android:maxLength="5"
                    android:textSize="16sp"
                    android:inputType="phone"/>

                <Spinner
                    android:id="@+id/spinnerLocationEdit"
                    style="@style/Widget.AppCompat.Spinner.Underlined"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:entries="@array/ciudades"
                    android:layout_weight="0.7"/>

            </LinearLayout>
            <Button
                android:id="@+id/btnSaveDir"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/guardar_cambios"
                android:background="@drawable/bg_button"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"/>

        </LinearLayout>

        </LinearLayout>
</ScrollView>